# micro-utils

./: .gitmodules  README.md
custom-messages-sender/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker_build.sh  docker_run.sh  main.c  make_and_run.sh
custom-messages-sender/Inc/: custom_sender.h  custom_sender_config.h
custom-messages-sender/Src/: custom_sender.c  main.c
docs/: .pages  micro-utils.md
docs/error-handler-generator/: .pages  error-handler-generator.md  error.md  input-file.md
error-handler-generator/: CHANGELOG.md  README.md  error-gen.gem  error_gen.gemspec
error-handler-generator/examples/: simple.c  simple.h  simple.json
error-handler-generator/lib/: error.rb  error_gen.rb  master_logger.rb  templates.rb  version.rb
